# etcdweb

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: app.py
src/static/: index.html
