[project]
name = "etcdweb"
version = "0.1.0"
description = ""
authors = [
    {name = "Xuanran",email = "John_xuanran@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "etcd3 @ git+https://github.com/kragniz/python-etcd3.git",
    "flask-cors (>=5.0.1,<6.0.0)",
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
